--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -31,36 +31,36 @@
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
       <h1>About Us</h1>
-      Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
+      Welcome to Sunshine Auto Group, your premier destination for quality vehicles in Southern California. Since 2005, we've been committed to providing exceptional customer service and a wide selection of both domestic and imported vehicles at competitive prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/janak.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Michael Rodriguez</p>
+          <p>General Manager</p>
+          <p class="card-text">With over 15 years in automotive sales and management, Michael leads our team with dedication to customer satisfaction. His expertise ensures every client finds their perfect vehicle.</p>
+          <p>michael.rodriguez@sunshineauto.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/janak.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Sarah Chen</p>
+          <p>Sales Director</p>
+          <p class="card-text">Sarah specializes in luxury imports and brings 12 years of industry experience. She's passionate about matching clients with vehicles that suit their lifestyle and budget.</p>
+          <p>sarah.chen@sunshineauto.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/janak.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">David Wilson</p>
+          <p>Finance Manager</p>
+          <p class="card-text">David helps customers navigate financing options with over 10 years of experience. He's committed to finding the best payment solutions for every budget and credit situation.</p>
+          <p>david.wilson@sunshineauto.com</p>
         </div>
       </div>
     </div>
@@ -70,3 +70,4 @@
 </div>
 
 </html>
+```
